# hfendpoints

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: integration.yml  rust.yml
catalog/vllm/whisper/: Dockerfile  endpoint.py  requirements.txt
hfendpoints/: Cargo.toml  pyproject.toml
hfendpoints-audio/: Cargo.toml
hfendpoints-audio/src/: lib.rs
hfendpoints-binding-python/: Cargo.toml
hfendpoints-binding-python/src/: buffers.rs  lib.rs  tokio.rs
hfendpoints-core/: Cargo.toml
hfendpoints-core/src/: context.rs  endpoint.rs  environ.rs  handler.rs  lib.rs  metrics.rs
hfendpoints-http/: Cargo.toml
hfendpoints-http/src/: api.rs  context.rs  environ.rs  error.rs  headers.rs  lib.rs  routes.rs
hfendpoints-http/src/audio/: mod.rs  transcription.rs
hfendpoints-http/src/embeddings/: mod.rs
hfendpoints-http/src/huggingface/: asr.rs  mod.rs
hfendpoints-http/src/openai/: mod.rs
hfendpoints-http/src/openai/audio/: mod.rs  transcription.rs
hfendpoints-inference/: Cargo.toml
hfendpoints-inference-engine/: Cargo.toml
hfendpoints-inference-engine/protobuf/: infer.proto
hfendpoints-inference-engine/src/: lib.rs
hfendpoints-inference/src/: lib.rs
hfendpoints-inference/src/embeddings/: mod.rs
hfendpoints-io/: Cargo.toml
hfendpoints-io/src/: lib.rs
hfendpoints-io/src/audio/: transcription.rs
hfendpoints-io/src/embedding/: mod.rs
hfendpoints-io/src/embeddings/: mod.rs
hfendpoints-openai/: Cargo.toml
hfendpoints-openai/src/: context.rs  error.rs  headers.rs  lib.rs
hfendpoints-openai/src/audio/: mod.rs  transcription.rs
hfendpoints-openai/src/embeddings/: mod.rs
hfendpoints-tasks/: Cargo.toml
hfendpoints-tasks/src/: lib.rs
hfendpoints-tasks/src/audio/: mod.rs  transcription.rs
hfendpoints-tasks/src/embedding/: mod.rs
hfendpoints-transports/: Cargo.toml
hfendpoints-transports-axum/: Cargo.toml
hfendpoints-transports-axum/src/: lib.rs
hfendpoints-transports-axum/src/openai/: error.rs  mod.rs
hfendpoints-transports-axum/src/openai/audio/: mod.rs  transcription.rs
hfendpoints-transports/src/: lib.rs
hfendpoints/bindings/python/examples/whisper/: endpoint.py  requirements.txt
hfendpoints/bindings/python/hfendpoints/: __init__.py  config.py
hfendpoints/bindings/python/hfendpoints/config/: __init__.py  frontend.py
hfendpoints/bindings/python/hfendpoints/errors/: __init__.py  config.py
hfendpoints/bindings/python/hfendpoints/hfinference/embedding/: __init__.py
hfendpoints/bindings/python/hfendpoints/http/: __init__.py  __init__.pyi
hfendpoints/bindings/python/hfendpoints/http/audio/: __init__.py  __init__.pyi
hfendpoints/bindings/python/hfendpoints/http/embeddings/: __init__.py  __init__.pyi
hfendpoints/bindings/python/hfendpoints/io/: __init__.py  embeddings.pyi
hfendpoints/bindings/python/hfendpoints/io/audio/: transcription.py  transcription.pyi
hfendpoints/bindings/python/hfendpoints/io/embedding/: __init__.py
hfendpoints/bindings/python/hfendpoints/openai/: __init__.py  __init__.pyi
hfendpoints/bindings/python/hfendpoints/openai/audio/: __init__.py  __init__.pyi
hfendpoints/bindings/python/hfendpoints/openai/embedding/: __init__.py
hfendpoints/bindings/python/hfendpoints/openai/embeddings/: __init__.py
hfendpoints/bindings/python/hfendpoints/tasks/: __init__.py  __init__.pyi.py
hfendpoints/bindings/python/hfendpoints/tasks/audio/: transcription.py
hfendpoints/bindings/python/hfendpoints/tasks/embedding/: __init__.py  __init__.pyi
hfendpoints/src/: lib.rs  openai.rs
hfendpoints/src/python/: mod.rs
