[workspace]
resolver = "3"
members = [
    "hfendpoints",
    "hfendpoints-audio",
    "hfendpoints-binding-python",
    "hfendpoints-core",
    "hfendpoints-http"
]

[workspace.dependencies]
pyo3 = { version = "0.24.1", features = ["abi3-py312"] }
serde = "1.0"
tokio = { version = "1.44", default-features = false }
tracing = "0.1.41"

[profile]
release = { lto = true, opt-level = 3, codegen-units = 1 }