[package]
name = "hfendpoints-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hfendpoints-binding-python = { path = "../hfendpoints-binding-python", optional = true }
pyo3 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0"
tokio = { workspace = true, features = ["sync"] }
log = "0.4.27"

[features]
default = []
python = ["pyo3", "hfendpoints-binding-python"]