[package]
name = "hfendpoints-core"
version = "0.3.0"
edition = "2024"

[dependencies]
hfendpoints-binding-python = { path = "../hfendpoints-binding-python", optional = true }
pyo3 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0"
tokio = { workspace = true, features = ["sync", "rt"] }
tracing = "0.1"

[features]
default = []
python = ["pyo3", "hfendpoints-binding-python"]