[package]
name = "hfendpoints-http"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart", "tracing"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "tracing"] }
headers = "0.4.0"
hfendpoints-core = { path = "../hfendpoints-core" }
pyo3 = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.12"
tokio = { workspace = true, features = ["net", "parking_lot", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["tracing", "tokio"] }
tower-http = { version = "0.6.2", features = ["request-id", "tracing", "trace", "timeout"] }
tracing = { workspace = true }
utoipa = { version = "5.3", features = ["smallvec"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[features]
default = []
python = ["hfendpoints-core/python"]