[package]
name = "hfendpoints-openai"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true }
hfendpoints-binding-python = { path = "../hfendpoints-binding-python", optional = true }
hfendpoints-core = { path = "../hfendpoints-core" }
hfendpoints-http = { path = "../hfendpoints-http" }
pyo3 = { workspace = true, optional = true, features = ["abi3-py312", "experimental-async"] }
pyo3-async-runtimes = { version = "0.24", features = ["attributes", "tokio-runtime"] }
#rust-numpy = { version = "0.1.0", optional = true }
#numpy = { version = "0.24.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

[dev-dependencies]
hyper = "1.6.0"
http-body-util = "0.1.3"
serde_json = "1.0"
tokio = { workspace = true, features = ["sync"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.4", features = ["timeout"] }

[features]
default = []
#python = ["hfendpoints-binding-python/tokio", "pyo3", "rust-numpy", "numpy"]
python = ["hfendpoints-binding-python/tokio", "pyo3"]