[package]
name = "hfendpoints-transports-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
hfendpoints-binding-python = { path = "../hfendpoints-binding-python", optional = true }
hfendpoints-core = { path = "../hfendpoints-core" }
pyo3 = { version = "0.24.0", optional = true, features = ["abi3-py312", "experimental-async"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { workspace = true, features = ["net", "parking_lot", "rt-multi-thread"] }
tracing.workspace = true
utoipa = { version = "5.3", features = ["smallvec"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
python = ["hfendpoints-binding-python", "pyo3"]