[package]
name = "hfendpoints"
version = "0.1.0"
edition = "2024"

[dependencies]
hfendpoints-binding-python = { path = "../hfendpoints-binding-python", optional = true }
hfendpoints-core = { path = "../hfendpoints-core", optional = true }
hfendpoints-transports-axum = { path = "../hfendpoints-transports-axum" }
pyo3 = { workspace = true, optional = true, features = ["auto-initialize", "extension-module"] }
pyo3-log = { version = "0.12.2", optional = true }
tracing-subscriber = "0.3"

[features]
default = []
python = [
    "pyo3",
    "pyo3-log",
    "hfendpoints-binding-python",
    "hfendpoints-core/python",
    "hfendpoints-transports-axum/python"
]