[package]
name = "hfendpoints"
version = "0.1.0"
edition = "2024"

[lib]
name = "hfendpoints"
crate-type = ["cdylib"]

[dependencies]
hfendpoints-binding-python = { path = "../hfendpoints-binding-python", optional = true }
hfendpoints-core = { path = "../hfendpoints-core", optional = true }
hfendpoints-openai = { path = "../hfendpoints-openai" }
pyo3 = { workspace = true, optional = true, features = ["auto-initialize", "extension-module"] }
pyo3-log = { version = "0.12.2", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
python = [
    "pyo3",
    "pyo3-log",
    "hfendpoints-binding-python",
    "hfendpoints-core/python",
    "hfendpoints-openai/python"
]